# QA-System-based-on-bert

./: .gitignore  README.md  pyproject.toml  pytest.ini
data/: movie.csv
src/: main.py
src/NLP/: README.md
src/NLP/bert_intent_slot/: bert-base-chinese  datasets.py  detector.py  preditc.py  train.py
src/NLP/bert_intent_slot/data/DouBanTop250/: extract_labels.py  intent_labels.txt  slot_labels.txt
src/NLP/bert_intent_slot/src/bert_intent_slot/: __init__.py  __main__.py
src/data/: build_dataset.py  build_db.py
src/final/: __init__.py  __main__.py  answer.py  chat.py  embed.py  graph.py  question.py
src/test/: test_answer.py
src/utils/: bert_pipeline.py  crawl_data.py
